--- a/app/src/main/res/layout/activity_medication.xml
+++ b/app/src/main/res/layout/activity_medication.xml
@@ -22,71 +22,91 @@
 
     <TextView
         android:id="@+id/textView17"
-        android:layout_width="170dp"
-        android:layout_height="58dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginBottom="56dp"
         android:text="Ler Posologia"
         android:textColor="#FFFFFF"
         android:textSize="24dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="133dp"
-        tools:layout_editor_absoluteY="288dp" />
+        app:layout_constraintBottom_toTopOf="@+id/medName"
+        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
+        app:layout_constraintStart_toStartOf="@+id/medName"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
     <TextView
         android:id="@+id/medName"
-        android:layout_width="170dp"
-        android:layout_height="58dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="32dp"
         android:fontFamily="@font/bahnschrift1"
         android:gravity="center_horizontal"
         android:text="Clavamox"
         android:textColor="#000000"
         android:textSize="24dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="402dp" />
+        app:layout_constraintBottom_toTopOf="@+id/med_posology"
+        app:layout_constraintEnd_toEndOf="@+id/med_posology"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/med_posology"
+        app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <TextView
         android:id="@+id/med_posology"
         android:layout_width="234dp"
-        android:layout_height="107dp"
+        android:layout_height="0dp"
         android:gravity="center_horizontal"
         android:text="1 comprimido de 12 em 12 horas durante 7 dias"
         android:textColor="#000000"
         android:textSize="20dp"
-        tools:layout_editor_absoluteX="88dp"
-        tools:layout_editor_absoluteY="460dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView20"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medName" />
 
     <TextView
         android:id="@+id/textView20"
         android:layout_width="229dp"
-        android:layout_height="62dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="102dp"
         android:gravity="center_horizontal"
         android:text="Consultar bula"
         android:textColor="#3F51B5"
         android:textSize="20dp"
-        tools:layout_editor_absoluteX="91dp"
-        tools:layout_editor_absoluteY="567dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/med_posology" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="416dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="188dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="198dp"
         android:background="#1D71B8"
-        app:layout_constraintBottom_toTopOf="@+id/imageView7"
+        app:layout_constraintBottom_toTopOf="@+id/textView17"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/imageView10"
-            android:layout_width="65dp"
-            android:layout_height="63dp"
+            android:layout_width="53dp"
+            android:layout_height="52dp"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.51"
+            app:layout_constraintVertical_bias="0.421"
             app:srcCompat="@drawable/arrow" />
 
         <TextView
