--- a/app/src/main/res/layout/activity_medication.xml
+++ b/app/src/main/res/layout/activity_medication.xml
@@ -12,7 +12,7 @@
         android:layout_height="90dp"
         android:layout_marginBottom="16dp"
         android:background="#1D71B8"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
+        app:layout_constraintBottom_toTopOf="@+id/toSpeech"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -57,7 +57,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageButton
-        android:id="@+id/imageButton5"
+        android:id="@+id/toSpeech"
         android:layout_width="0dp"
         android:layout_height="225dp"
         android:layout_marginStart="50dp"
@@ -83,10 +83,10 @@
         android:textColor="#FFFFFF"
         android:textSize="24dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
-        app:layout_constraintStart_toStartOf="@+id/imageButton5"
-        app:layout_constraintTop_toTopOf="@+id/imageButton5"
+        app:layout_constraintBottom_toBottomOf="@+id/toSpeech"
+        app:layout_constraintEnd_toEndOf="@+id/toSpeech"
+        app:layout_constraintStart_toStartOf="@+id/toSpeech"
+        app:layout_constraintTop_toTopOf="@+id/toSpeech"
         app:layout_constraintVertical_bias="0.921" />
 
     <TextView
@@ -109,7 +109,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />
+        app:layout_constraintTop_toBottomOf="@+id/toSpeech" />
 
     <TextView
         android:id="@+id/med_posology"
