--- a/app/src/main/res/layout/activity_register_type.xml
+++ b/app/src/main/res/layout/activity_register_type.xml
@@ -88,6 +88,16 @@
         app:layout_constraintStart_toStartOf="@+id/email"
         app:layout_constraintTop_toTopOf="@+id/email" />
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.742" />
+
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="0dp"
