--- a/app/src/main/res/layout/activity_register_type.xml
+++ b/app/src/main/res/layout/activity_register_type.xml
@@ -8,7 +8,7 @@
     tools:context=".RegisterType">
 
     <com.facebook.login.widget.LoginButton
-        android:id="@+id/buttonFacebookLogin2"
+        android:id="@+id/buttonFacebookLogin"
         android:layout_width="280dp"
         android:layout_height="95dp"
         android:layout_gravity="center_horizontal"
